Sentiment calculated and analysis performed. Results saved.

--- a/youtube.ipynb
+++ b/youtube.ipynb
@@ -2,10 +2,124 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "d3987ab9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🎥 YouTube Data Scraper - Avvio raccolta dati...\n",
+      "🔍 Query: 'war ukraine'\n",
+      "📅 Range temporale: 2025-05-01T00:00:00Z -> 2025-05-10T23:59:59Z\n",
+      "✅ YouTube API inizializzata con successo!\n",
+      "\n",
+      "📄 Pagina 1 - Ricerca video...\n",
+      "   📹 Trovati 50 video\n",
+      "   🎬 Processando: Ukrainian forces eliminated 14 Russian soldiers at...\n",
+      "   🎬 Processando: Trump&#39;s message to Russia and Ukraine: Get thi...\n",
+      "   🎬 Processando: Spectacular Failure: 4 VECTORS, 46 ASSAULTS, ZERO ...\n",
+      "   🎬 Processando: F-16 &amp; Mirage Pilots Are Doing Something UNBEL...\n",
+      "   🎬 Processando: European leaders pressure Russia over 30-day Ukrai...\n",
+      "   🎬 Processando: Polina Kudermetova supports war against Ukraine...\n",
+      "   🎬 Processando: Moment Ukraine&#39;s drones hit Russian targets as...\n",
+      "   🎬 Processando: Unbelievable MAD MAX Tactics Used by Ukraine to CR...\n",
+      "   🎬 Processando: Russia ‘cannot survive’ Putin’s war in Ukraine | F...\n",
+      "   🎬 Processando: Ukraine’s Secret War Strategy Is Working...\n",
+      "   🎬 Processando: Putin RAGES as U.S. FUNDS Ukraine’s WEAPONS Surge...\n",
+      "   🎬 Processando: Xi Joins Putin At Victory Day As Russia Parades Uk...\n",
+      "   🎬 Processando: &#39;Xi Jinping has officially come off the fence&...\n",
+      "   🎬 Processando: #Russia parades drones during #VictoryDayparade, u...\n",
+      "   🎬 Processando: 3 Ukrainian fighters against attacking Russian pla...\n",
+      "   🎬 Processando: &#39;Xi Jinping has officially come off the fence&...\n",
+      "   🎬 Processando: Two heroic Ukrainian soldiers defeat FIVE Russians...\n",
+      "   🎬 Processando: Russia Victory Parade LIVE | Putin’s Military Powe...\n",
+      "   🎬 Processando: BREAKING: Trump calls for 30-day ceasefire in Russ...\n",
+      "   🎬 Processando: From Russian Motorbike Assaults to Ukraine’s New D...\n",
+      "   🎬 Processando: Ukraine: Stillstand an der Front – Militärökonom K...\n",
+      "   🎬 Processando: Update from Ukraine | Great! Ukraine Pushed Ruzzia...\n",
+      "   🎬 Processando: Putin MELTS DOWN as Ukraine’s Drones HIT Moscow HA...\n",
+      "   🎬 Processando: Abrams and Leopard vs. Russian Tank T-90M. Western...\n",
+      "   🎬 Processando: Russia urgently &quot;cancels May 9&quot; after ma...\n",
+      "   🎬 Processando: Russia-Ukraine War: &#39;Russia Asking For Too Muc...\n",
+      "   🎬 Processando: Ukraine drones hunt down Russian troops as Putin b...\n",
+      "   🎬 Processando: Trump warns of &#39;decisions&#39; that may need t...\n",
+      "   🎬 Processando: War Evolves: Combat Divers &amp; Ukraine’s Frontli...\n",
+      "   🎬 Processando: Putin’s war machine ‘burns’ as Russia strips front...\n",
+      "   🎬 Processando: Soldier pins down enemy targets with RPG fire...\n",
+      "   🎬 Processando: Biden accuses Trump of appeasement of Russia...\n",
+      "      ℹ️ Commenti disabilitati per video jOMM6bdEyBA\n",
+      "   🎬 Processando: Ukrainian drones strike key Moscow airfield in maj...\n",
+      "   🎬 Processando: Update from Ukraine | Crazy Biggest Strike on Ruzz...\n",
+      "   🎬 Processando: Ukraine sniper ELIMINATES Russian soldiers as they...\n",
+      "   🎬 Processando: Putin BETRAYED! US Sends MASSIVE Missile System to...\n",
+      "   🎬 Processando: Turkey Has Had ENOUGH! Erdogan STEPS IN to End Rus...\n",
+      "   🎬 Processando: Ukrainian drones attack Moscow, halting flights ah...\n",
+      "   🎬 Processando: Russian military armaments devastated by Ukraine b...\n",
+      "   🎬 Processando: Russian drones hit Kharkiv after Ukrainian attacks...\n",
+      "   🎬 Processando: Russia-Ukraine War LIVE: Massive Attack! Russian P...\n",
+      "   🎬 Processando: UK overwhelmed by Russian missiles in war game sim...\n",
+      "   🎬 Processando: Russia Launches Multi-Directional Offensives In Uk...\n",
+      "   🎬 Processando: Courage Turned Catastrophe: Russian Soldier&#39;s ...\n",
+      "   🎬 Processando: Former Head of MI6: How The Ukraine War Will End &...\n",
+      "   🎬 Processando: Update from Ukraine | Crazy! Ukraine Revenge | Big...\n",
+      "   🎬 Processando: Russia preparing for large-scale attacks on 3 regi...\n",
+      "   🎬 Processando: War in the Black Sea: Ukrainian defenders destroy ...\n",
+      "   🎬 Processando: Amid Zelensky Threat To Attack World Leaders In Ru...\n",
+      "   🎬 Processando: Russian commanders shot soldiers who refused to fi...\n",
+      "   ✅ 50 video, 1918 commenti raccolti\n",
+      "   📊 Totale: 50 video, 1918 commenti\n",
+      "   📈 Quota stimata usata: 151/10000\n",
+      "\n",
+      "📄 Pagina 2 - Ricerca video...\n",
+      "   📹 Trovati 26 video\n",
+      "   🎬 Processando: Russia launches deadly strike on Ukraine after US ...\n",
+      "   🎬 Processando: Retired US General SHOCKS Everyone - Russia’s Defe...\n",
+      "   🎬 Processando: The Shocking Truth About Russia’s Military Depende...\n",
+      "   🎬 Processando: Ukraine unleashes Brit missiles in heaviest blitz ...\n",
+      "   🎬 Processando: Russia-Ukraine War: Kharkiv Devastated by Russian ...\n",
+      "   🎬 Processando: Update from Ukraine | Wow! Ukraine goes all in Str...\n",
+      "   🎬 Processando: This Is the Life of Ukrainian Soldiers on the Fron...\n",
+      "   🎬 Processando: Russia-Ukraine War: Moscow Views Minerals Deal A D...\n",
+      "   🎬 Processando: Why Ukraine War&#39;s Deadly Drones Are Now Flying...\n",
+      "   🎬 Processando: Still Think Russia Is Defeating Ukraine? Watch Thi...\n",
+      "   🎬 Processando: US &#39;pulls out of Ukraine peace talks&#39; with...\n",
+      "   🎬 Processando: 24 Russian soldiers are dead - Ukrainian drones’ o...\n",
+      "   🎬 Processando: Vance: War in Ukraine Not Ending &#39;Anytime Soon...\n",
+      "   🎬 Processando: Explosions tear through Russian airbase as Ukraine...\n",
+      "   🎬 Processando: MASSIVE EXPLOSIONS IN CRIMEA, US GOES BALLISTIC ON...\n",
+      "   🎬 Processando: Horrible!! Ukrainian brigade blow up Russian infan...\n",
+      "   🎬 Processando: Ukraine DECLARES VICTORY as Russia’s Pokrovsk Plan...\n",
+      "   🎬 Processando: POV: ʼGuys, I’m 300ʼ. Ukraine’s Mopping-Up Mission...\n",
+      "   🎬 Processando: Putin Is FURIOUS! Ukraine Gets 6 Million Shells! 1...\n",
+      "   🎬 Processando: Can Ukraine still win the war against Russia? | BB...\n",
+      "   🎬 Processando: Pakistan-India war in 2025 ? #countryballs #UA_bal...\n",
+      "   🎬 Processando: Russia-Ukraine War: Russian Drones Damage Building...\n",
+      "   🎬 Processando: Putin Bashes Europe Over Ukraine War, Gives This M...\n",
+      "   🎬 Processando: Update from Ukraine | Zelenskyy wants to Strike Ru...\n",
+      "   🎬 Processando: Putin FURIOUS After French Missiles Leave Forces i...\n",
+      "   🎬 Processando: Mass &quot;suicide&quot; of Russians on motorcycle...\n",
+      "   ✅ 26 video, 1356 commenti raccolti\n",
+      "   📊 Totale: 76 video, 3274 commenti\n",
+      "   📈 Quota stimata usata: 278/10000\n",
+      "   ℹ️ Non ci sono più pagine disponibili\n",
+      "\n",
+      "💾 Salvataggio finale in youtube_war_ukraine_5.json...\n",
+      "\n",
+      "🎉 COMPLETATO!\n",
+      "📊 Statistiche finali:\n",
+      "   📄 Pagine processate: 2\n",
+      "   🎬 Video totali: 76\n",
+      "   💬 Commenti totali: 3274\n",
+      "   📈 Quota stimata usata: 278/10000 (2.8%)\n",
+      "   📄 File salvato: youtube_war_ukraine_5.json\n",
+      "   ⏱️ Media commenti/video: 43.1\n",
+      "\n",
+      "✨ Raccolta completata!\n"
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import json\n",
@@ -22,12 +136,12 @@
     "query = 'war ukraine'  # Puoi anche usare 'zelensky trump' per AND search\n",
     "max_results_per_search = 50  # Max 50 per richiesta\n",
     "max_videos = 2000  # Totale video da processare\n",
-    "output_json = 'youtube_war_ukraine_2.json'\n",
+    "output_json = 'youtube_war_ukraine_5.json'\n",
     "\n",
     "# --- FILTRI TEMPORALI ---\n",
     "# Puoi impostare range temporali specifici (formato ISO 8601: YYYY-MM-DDTHH:MM:SSZ)\n",
-    "published_after = '2024-03-01T00:00:00Z'  # Inizio range\n",
-    "published_before = '2025-07-01T23:59:59Z'  # Fine range\n",
+    "published_after = '2025-05-01T00:00:00Z'  # Inizio range\n",
+    "published_before = '2025-05-10T23:59:59Z'  # Fine range\n",
     "\n",
     "# --- SETTINGS ---\n",
     "request_delay = 1.0  # Secondi tra le richieste per rispettare rate limits\n",
@@ -313,17 +427,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c16176ee",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🎥 Numero totale di video: 76\n",
+      "💬 Numero totale di commenti raccolti: 3274\n",
+      "👀 Visualizzazioni totali: 37,288,351\n",
+      "👍 Like totali: 734,310\n",
+      "📊 Media commenti per video: 43.1\n",
+      "📊 Media visualizzazioni per video: 490,636\n",
+      "\n",
+      "🧾 DataFrame creato con 4596 righe\n",
+      "📊 Colonne disponibili: ['video_id', 'video_title', 'channel_title', 'channel_id', 'video_published_at', 'video_view_count', 'video_like_count', 'video_comment_count', 'video_duration', 'video_description', 'comment_author', 'comment_text', 'comment_like_count', 'comment_published_at', 'comment_updated_at', 'comment_replies_count', 'is_reply', 'video_age_days', 'comment_length', 'video_duration_seconds', 'video_duration_minutes']\n",
+      "\n",
+      "📋 Esempio del DataFrame:\n",
+      "                                         video_title  \\\n",
+      "0  Ukrainian forces eliminated 14 Russian soldier...   \n",
+      "1  Trump&#39;s message to Russia and Ukraine: Get...   \n",
+      "2  Spectacular Failure: 4 VECTORS, 46 ASSAULTS, Z...   \n",
+      "3  Spectacular Failure: 4 VECTORS, 46 ASSAULTS, Z...   \n",
+      "4  Spectacular Failure: 4 VECTORS, 46 ASSAULTS, Z...   \n",
+      "\n",
+      "                       channel_title            comment_author  \\\n",
+      "0                  US Military Rifle                      None   \n",
+      "1                    KMPH FOX26 NEWS                      None   \n",
+      "2  RFU News — Reporting from Ukraine                      @RFU   \n",
+      "3  RFU News — Reporting from Ukraine           @Curlyhowardfan   \n",
+      "4  RFU News — Reporting from Ukraine  @The-Droll-and-LazyJoker   \n",
+      "\n",
+      "   comment_like_count  is_reply  \n",
+      "0                 NaN     False  \n",
+      "1                 NaN     False  \n",
+      "2                63.0     False  \n",
+      "3               196.0     False  \n",
+      "4                16.0      True  \n",
+      "\n",
+      "📈 Statistiche rapide:\n",
+      "   🎬 Video unici: 76\n",
+      "   📺 Canali unici: 33\n",
+      "   👤 Autori commenti unici: 3908\n",
+      "   💬 Commenti principali: 3283\n",
+      "   🔄 Risposte: 1313\n",
+      "   👍 Like medio per commento: 42.1\n",
+      "   👍 Commento con più like: 3606.0\n",
+      "\n",
+      "🏆 Top 5 canali per numero di video:\n",
+      "   📺 The Sun: 10 video\n",
+      "   📺 The Military Show: 9 video\n",
+      "   📺 Kanal13: 7 video\n",
+      "   📺 WION: 6 video\n",
+      "   📺 Denys Davydov: 5 video\n",
+      "\n",
+      "💾 DataFrame salvato come: youtube_war_ukraine_data_5.csv\n",
+      "💾 Solo commenti salvati come: youtube_war_ukraine_comments_only_5.csv\n",
+      "💾 Summary video salvato come: youtube_war_ukraine_video_summary_5.csv\n",
+      "\n",
+      "✨ Elaborazione completata!\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import pandas as pd\n",
     "from datetime import datetime\n",
     "\n",
     "# --- Caricamento del file JSON ---\n",
-    "with open('youtube_war_ukraine_2.json', 'r', encoding='utf-8') as f:\n",
+    "with open('youtube_war_ukraine_5.json', 'r', encoding='utf-8') as f:\n",
     "    data = json.load(f)\n",
     "\n",
     "# --- Statistiche ---\n",
@@ -505,14 +679,14 @@
     "# --- Salvataggio ---\n",
     "if not df.empty:\n",
     "    # Salva come CSV\n",
-    "    csv_filename = 'youtube_war_ukraine_data_2.csv'\n",
+    "    csv_filename = 'youtube_war_ukraine_data_5.csv'\n",
     "    df.to_csv(csv_filename, index=False, encoding='utf-8')\n",
     "    print(f\"\\n💾 DataFrame salvato come: {csv_filename}\")\n",
     "    \n",
     "    # Salva anche un dataset solo commenti (senza video senza commenti)\n",
     "    df_comments_only = df[df['comment_text'].notna()]\n",
     "    if not df_comments_only.empty:\n",
-    "        comments_csv = 'youtube_war_ukraine_comments_only_2.csv'\n",
+    "        comments_csv = 'youtube_war_ukraine_comments_only_5.csv'\n",
     "        df_comments_only.to_csv(comments_csv, index=False, encoding='utf-8')\n",
     "        print(f\"💾 Solo commenti salvati come: {comments_csv}\")\n",
     "        \n",
@@ -531,7 +705,7 @@
     "                           'like_count', 'total_comments', 'duration_minutes',\n",
     "                           'comments_collected', 'total_comment_likes', 'avg_comment_likes', 'published_at']\n",
     "    \n",
-    "    video_summary_csv = 'youtube_war_ukraine_video_summary_2.csv'\n",
+    "    video_summary_csv = 'youtube_war_ukraine_video_summary_5.csv'\n",
     "    video_summary.to_csv(video_summary_csv, index=False, encoding='utf-8')\n",
     "    print(f\"💾 Summary video salvato come: {video_summary_csv}\")\n",
     "\n",
@@ -540,8 +714,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
