--- a/dati4.ipynb
+++ b/dati4.ipynb
@@ -218,10 +218,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "1e209f31",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📌 Numero totale di post: 197\n",
+      "💬 Numero totale di commenti ad alto punteggio: 17370\n",
+      "\n",
+      "🧾 Esempio del DataFrame:\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import pandas as pd\n",
@@ -273,8 +284,22 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "base",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
